  DefaultEntityKey now overrides validateAndPrepare(), validation moved from handlePut()
  DefaultProperty.validateType() now returns the value
  DefaultEntity and DefaultEntityKey now validate types on deserialization
  DefaultLocalEntityConnection.lockAndCheckIfModified() new bug fixed, now only selects writable along with primary key properties
  DefaultEntityDefinition.getSelectableColumnProperties() now uses old school for loop instead of stream
  Entity.Definition.getProperties(includeHidden) removed
  Domain.define() now protected
  DefaultEntityLocalConnection, blob handling improved, blob property values are now fetched by default
  Chinook demo, added blob image example
  BlobProperty added, with lazyLoading option
  EntityTestUnit now includes blob properties
  Blob unit tests improved
  BlobInputProvider added
  BlobProperty is now hidden by default
  NavigableImagePanel.setMoveImageEnabled() added
  DefaultEntity, now performes property and type validation on constructor parameters
  Entity.getProperty(propertyId) and Entity.Key.getPropertyCount() removed
  DefaultEntityDefinition refactored
  shutdownServer task added to server build file
  DefaultEntityDefinition constructor simplified, required methods moved from Domain
  DefaultEntityDefinition, some minor refactoring, reordering, Entity.Definition removed a couple of methods
  Domain.isDefined(entityId) removed, some refactoring
  KeyGenerators added, classes and methods moved from Domain
  KeyGenerators, KeyGenerator suffix removed from method names
  KeyGenerator.Type removed, isInserted() added
  Entity.Definition.getKeyGeneratorType() removed, isKeyGenerated() added
  Entity.Definition moved up to package level as EntityDefinition
  Entity.KeyGenerator moved up to package level
  KeyGenerator.isInserted() default implementation added returning true
  DatabaseConnection.Operation, Function and Procedure moved to package operation, DefaultOperation is now AbstractOperation